# Mediapipe-SteamVR-Full-Body-Tracking-for-Linux

./: CMakeLists.txt  README.md  SimpleDisplay.py  driver.cpp  gui.py  install.sh  mediapipe_vr_sender.py  run.sh  uninstall.sh
mediapipe_driver/: driver.vrdrivermanifest
